--- a/theteam.html
+++ b/theteam.html
@@ -125,14 +125,17 @@ Author URL: http://w3layouts.com
 							<li><span class="fa fa-check"></span>Cumulative research experience: 60+ research projects undertaken, 20+ research papers published.</li> 
 							<li><span class="fa fa-check"></span>Alumni from world's top science fairs, research programs and fellowships.</li>
 							<li> <span class="fa fa-check"></span>Advised by eminent researchers, teachers, educationists and leaders.</li>
-							</h4>
+							<li>Alumni from*:</li>
+								</h4>
 		     </ul></div>
 		    <br> </div>
 								<img src="logos/isef_logo.png" height="180" style="padding: 15px;">
 								<img src="logos/RSI.png" height="180" style="padding: 15px;">
 								<img src="logos/SSP.png" height="180" style="padding: 15px;">
 								<img src="logos/IRIS.png" height="180" style="padding: 15px;">
-								<img src="logos/KVPY.png" height="180" style="padding: 15px;"><br> <br> <br>
+								<img src="logos/KVPY.png" height="180" style="padding: 15px;">
+		
+		The logos  shown belong to the respective organisations and do not indicate association with reSTEM.		<br> <br> <br>
 	<div>
 		    <h3 id="adv"> Our advisors </h3> <br>
 		<iframe class="airtable-embed" src="https://airtable.com/embed/shrs5JJGlAYbXvUiy?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ffffff;"></iframe>
