--- a/index.html
+++ b/index.html
@@ -257,16 +257,17 @@ Author URL: http://w3layouts.com
               <li><span class="fa fa-check"></span>Get to <a href="http://publish.ysjournal.com"><u>publish your research</u></a> in the Young Scientists Journal.</li>
               <li><span class="fa fa-check"></span>Exclusive benefits for attending and presenting at <a href="https://events.ysjournal.com/"><u>conferences of the Young Scientists Journal.</u></a><li>
             </ul>
-            <br>
+		<a class="btn btn-secondary btn-theme2 mt-3" href="activities.html"> Read More</a>
+		<br> <br>
 		<img src="assets/conf pics/conf4.jpg" class="img-responsive" alt="">
             <div>
             
-							<a class="btn btn-secondary btn-theme2 mt-3" href="activities.html"> Read More</a>
+							
             </div>
             </div>
 				  <div class="column ccont-left col-lg-6">
           <br><br>
-          <img src="assets/conf pics/conf5.jpeg" class="img-responsive" alt=""><br>
+          <img src="assets/conf pics/conf5.jpeg" class="img-responsive" alt=""><br> <br>
           <b>Benefits for clubs:</b>
             <ul class="cont-4">
               <li><span class="fa fa-check"></span>Research 101 workshops and seminars for reSTEM Safari sessions, delivered via our online portal.</li>
