--- a/index.html
+++ b/index.html
@@ -257,8 +257,7 @@ Author URL: http://w3layouts.com
               <li><span class="fa fa-check"></span>Get to <a href="http://publish.ysjournal.com"><u>publish your research</u></a> in the Young Scientists Journal.</li>
               <li><span class="fa fa-check"></span>Exclusive benefits for attending and presenting at <a href="https://events.ysjournal.com/"><u>conferences of the Young Scientists Journal.</u></a><li>
             </ul>
-		<a class="btn btn-secondary btn-theme2 mt-3" href="activities.html"> Read More</a>
-		<br> <br> <br> <br>
+				<br> <br> <br> <br>
 		<img src="assets/conf pics/conf4.jpg" class="img-responsive" alt="">
             <div>
             
@@ -280,8 +279,11 @@ Author URL: http://w3layouts.com
               
             </ul>
 				</div>
+			
+		
 			</div>
 		</div>
+		<a class="btn btn-secondary btn-theme2 mt-3" style="text-align:center;" href="activities.html"> Read More</a>
 	</div>
 </section>
 
