--- a/index.html
+++ b/index.html
@@ -283,7 +283,9 @@ Author URL: http://w3layouts.com
 		
 			</div>
 		</div>
-		<a class="btn btn-secondary btn-theme2 mt-3" style="margin-left:auto; margin-right:auto;" href="activities.html"> Read More</a>
+		<div style="margin-left:auto;margin-right:auto;">
+		<a class="btn btn-secondary btn-theme2 mt-3"  href="activities.html"> Read More</a>
+			</div>
 	</div>
 </section>
 
