--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ Author URL: http://w3layouts.com
 			</div>
 		</div>
 		<div>
-		<a style = "display:block; margin:auto;" class="btn btn-secondary btn-theme2 mt-3"  href="activities.html"> Read More</a>
+		<a style = "margin:auto;" class="btn btn-secondary btn-theme2 mt-3"  href="activities.html"> Read More</a>
 			</div>
 	</div>
 </section>
