--- a/index.html
+++ b/index.html
@@ -269,11 +269,11 @@ Author URL: http://w3layouts.com
           <img src="assets/conf pics/conf5.jpeg" class="img-responsive" alt=""><br> <br>
           <b>Benefits for clubs:</b>
             <ul class="cont-4">
-              <li><span class="fa fa-check"></span>Research 101 workshops and seminars for reSTEM Safari sessions, delivered via our online portal.</li>
-              <li><span class="fa fa-check"></span>Flexible calendars for weekly activities (With 4/6 months of activities).</li>
+              <li><span class="fa fa-check"></span> <a href ="activities.html#research101">Research 101 workshops </a>and <a href="activities.html#discoveringstem">Discovering STEM Seminars</a>, delivered via our online portal.</li>
+              <li><span class="fa fa-check"></span>Flexible <a href="calendar.html">calendars</a> for weekly activities (With 4/6 months of activities).</li>
               <li><span class="fa fa-check"></span>Promotional material and graphics to boost enrollment.</li>
               <li><span class="fa fa-check"></span>Orientation session for prospective members.</li>
-              <li><span class="fa fa-check"></span>Online Hub community on Roundpier  .</li>
+              <li><span class="fa fa-check"></span>Online Hub community on <a href="roundpier.com">Roundpier.</a></li>
               <li><span class="fa fa-check"></span>Support for the production of a Hub Journal (YSJ local edition) and training for Hub journal editors.</li>
               <li><span class="fa fa-check"></span>Support for conducting a Hub Science Fair/Exhibition/Conference.</li>
               
@@ -284,7 +284,7 @@ Author URL: http://w3layouts.com
 			</div>
 		</div>
 		<div>
-		<a style = "margin:auto;" class="btn btn-secondary btn-theme2 mt-3"  href="activities.html"> Read More</a>
+		
 			</div>
 	</div>
 </section>
