--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Author URL: http://w3layouts.com
     <div class="owl-one owl-carousel owl-theme">
       <div class="item">
         <li>
-          <div class="slider-info banner-view bg bg2" data-selector=".bg.bg2">
+          <div class="slider-info banner-view bg2" data-selector=".bg.bg2">
             <div class="banner-info">
               <div class="container">
                 <div class="banner-info-bg mx-auto text-center">
@@ -245,7 +245,7 @@ Author URL: http://w3layouts.com
 		
 			<div class="calltoaction-20-content row">
 				<div class="column center-align-self col-lg-6 pr-lg-5">
-          <div style="bg-color:#cc0000;text-xolor:#ffffff;">
+          <div style="background-color:#cc0000;text-xolor:#ffffff;">
 					<h5 class="editContent">reSTEM</h5>
           
 					<p class="more-gap editContent">Transform your school science club by affiliating it to reSTEM and availing exclusive benefits for free! <a href="join.html"><u>Join now!</u></a></p>
