--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@ Author URL: http://w3layouts.com
             </div>
             </div>
 				  <div class="column ccont-left col-lg-6">
-          <br><br>
-          <img src="assets/conf pics/conf5.jpeg" class="img-responsive" alt=""><br>
+          <br><br><br>
+          <img src="assets/conf pics/conf5.jpeg" class="img-responsive" alt=""><br><br>
           
 					  <b>Benefits for clubs:</b>
             <ul class="cont-4">
