--- a/activities.html
+++ b/activities.html
@@ -121,20 +121,25 @@ Author URL: http://w3layouts.com
                         <h3>Activities</h3>
                     <p>Hubs have the flexibility to conduct any STEM-related activities, though the focus is expected to be on research. The following activities are directly supported by the YSJ: </p>
                     <ul class="cont-4">
-                          <li><span class="fa fa-check"></span><u><a href="discoveringstem.html" target="_top" name="discoveringstem">Discovering STEM</a></u>, a series of introductory sessions (seminars, activities etc) to introduce members to different fields of STEM like Artificial Intelligence, neuroscience, Bioinformatics, etc in collaboration with specialising organisations.</li>
-                          <li><span class="fa fa-check"></span><u><a href="decodingstem.html" target="_top" name="decodingstem">Decoding STEM</a></u>, a series of sessions on career and academic opportunities like science fairs, research programs, entrepreneurship, international university admissions, olympiads etc. in collaboration with specialising organizations.</li>
-                          <li><span class="fa fa-check"></span><u><a href="research101.html" target="_top" name="research101">Research 101</a></u>, research skill building workshops for conducting research, writing research papers and participating in science fairs.</li>
-                          <li><span class="fa fa-check"></span><a name="exploringstem">Exploring STEM</a> - Talks by experienced scientists and student researchers about their experience.</li>
-                          <li><span class="fa fa-check"></span>Members will get access to an exclusive, curated database of guided science projects to learn research skills hands-on without having to conduct an original project.</li>
-                          <li><span class="fa fa-check"></span>reSTEM Challenge: Certificate for completing original research project and writing research paper.</li>
-                          <li><span class="fa fa-check"></span><a name="hubjournal">Publish in the Young Scientists Journal.</a></li>
-                          <li><span class="fa fa-check"></span>Mentorship to selected original research projects.</li>
-                          <li><span class="fa fa-check"></span>Recognition for best projects.</li>
-                          <li><span class="fa fa-check"></span>Produce local editions of the YSJournal for your community.</li>
-                          <li><span class="fa fa-check"></span>Award and recognition for best Hub Journal.</li>
-                          <li><span class="fa fa-check"></span>Training in writing and editing scientific articles and research papers.</li>
-                          <li><span class="fa fa-check"></span>Publication in the Young Scientists Journal for best articles.</li>
-                          <li><span class="fa fa-check"></span>May be featured in school magazines etc.</li>
+                          <li><span class="fa fa-check"></span><u><a href="discoveringstem.html" target="_top" name="discoveringstem">Discovering STEM</a></u></li>
+			    <li> A series of introductory sessions (seminars, activities etc) to introduce members to different fields of STEM like Artificial Intelligence, neuroscience, Bioinformatics, etc in collaboration with specialising organisations.</li>
+                         <li><span class="fa fa-check"></span><u><a href="decodingstem.html" target="_top" name="decodingstem">Decoding STEM</a></u> </li> 
+			    <li> series of sessions on career and academic opportunities like science fairs, research programs, entrepreneurship, international university admissions, olympiads etc. in collaboration with specialising organizations.</li></li>
+                          <li><span class="fa fa-check"></span><u><a href="research101.html" target="_top" name="research101">Research 101</a></u> </li> 
+			<li>Research skill building workshops for conducting research, writing research papers and participating in science fairs.</li>
+                          <li><span class="fa fa-check"></span><a name="exploringstem">Exploring STEM</a> </li>
+			<li> Talks by experienced scientists and student researchers about their experience.</li>
+
+			  <li><span class="fa fa-check"></span>reSTEM Capstone: </li>
+			  <li>Complete an original research project and write a research paper.</li>
+                          <li>Publish in the Young Scientists Journal</li>
+                          <li>Mentorship to selected original research projects.</li>
+                          <li>Recognition for best projects.</li>
+			    <li><span class="fa fa-check"></span>Hub Journal</li>
+			<li> Produce local editions of the YSJournal for your community.</li>
+                          <li>Award and recognition for best Hub Journal.</li>
+                          <li>Training in writing and editing scientific articles and research papers.</li>
+                          <li>Publication in the Young Scientists Journal for best articles.</li>
                         </ul>
                     </ul>
                 </div>
