--- a/faq.html
+++ b/faq.html
@@ -192,12 +192,12 @@ for (i = 0; i < acc.length; i++) {
                       <li><span class="fa fa-check"></span>Attend and present at conferences of the Young Scientists Journal.</li>
                     </ul>
                     <button class="accordion">How does a club benefit from membership of reSTEM and which ones are eligible?</button>
-                    <p class="panel">
+                    <div class="panel">
 			<ul>			    
                       <li><span class="fa fa-check"></span>Access to unique activities (elaborated below) to promote STEM, especially research.</li>
                       <li><span class="fa fa-check"></span>Promotional material and other support to increase enrolment.</li>
                       <li><span class="fa fa-check"></span>For membership of the network, a club must be: STEM-oriented, authorized to operate by the institution and free and open for all students of the institution.</li>
-			</ul></p>
+			</ul></div>
                     <p><b>How to join?</b></p>
                     <ul class="cont-4">
                       <li><span class="fa fa-check"></span>Sign up using the online form.</li>
