--- a/faq.html
+++ b/faq.html
@@ -150,50 +150,57 @@ Author URL: http://w3layouts.com
                 <div class="cwp4-text col-lg-6">
                     <button class="accordion">What is reSTEM?</button>
                     <div class="panel">
-                        <span class="fa fa-check"></span>Subsidiary of the prestigious Young Scientists Journal, reSTEM is a global network of research-oriented high school science clubs.</li>
-                        <span class="fa fa-check"></span>These hubs are provided with support for conducting activities like skill workshops, guidance seminars etc.</li>
-                        <span class="fa fa-check"></span>Hubs and Hub members compete with each other in various contests.</li>
-                        <span class="fa fa-check"></span>reSTEM Hubs form a global community of youth STEM research.</li>
+                        <span class="fa fa-check"></span>Subsidiary of the prestigious Young Scientists Journal, reSTEM is a global network of research-oriented high school science clubs.<br>
+                        <span class="fa fa-check"></span>These hubs are provided with support for conducting activities like skill workshops, guidance seminars etc.<br>
+                        <span class="fa fa-check"></span>Hubs and Hub members compete with each other in various contests.<br>
+                        <span class="fa fa-check"></span>reSTEM Hubs form a global community of youth STEM research.<br>
                     </div>
                     <button class="accordion">What makes it unique?</button>
                     <div class="panel">
-                      <span class="fa fa-check"></span><b>Free</b> and <b>open</b> for schools across the world.</li>
-                      <span class="fa fa-check"></span>Focus on research.</li>
-                      <span class="fa fa-check"></span>Emphasis on practical application of knowledge and skill-building.</li>
-                      <span class="fa fa-check"></span>Comprehensive action and experience based learning framework.</li>
+                      <span class="fa fa-check"></span><b>Free</b> and <b>open</b> for schools across the world.<br>
+                      <span class="fa fa-check"></span>Focus on research.<br>
+                      <span class="fa fa-check"></span>Emphasis on practical application of knowledge and skill-building.<br>
+                      <span class="fa fa-check"></span>Comprehensive action and experience based learning framework.<br>
                     </div>
                     <button class="accordion">What is a reSTEM Hub?</button>
                     <div class="panel">
-                      <span class="fa fa-check"></span>A high school science club (or group of science clubs within a school) associated with YSJ reSTEM focusing on research-related activities.</li>
-                      <span class="fa fa-check"></span>May be either student-led or school-run.</li>
+                      <span class="fa fa-check"></span>A high school science club (or group of science clubs within a school) associated with YSJ reSTEM focusing on research-related activities.<br>
+                      <span class="fa fa-check"></span>May be either student-led or school-run.<br>
                     </div>
                     <button class="accordion">How do hub members benefit?</button>
                     <div class="panel">
-                      <span class="fa fa-check"></span>Learn skills and exposure for research and competing at science fairs.</li>
-                      <span class="fa fa-check"></span>Publish your research.</li>
-                      <span class="fa fa-check"></span>Receive mentorship for research projects.</li>
-                      <span class="fa fa-check"></span>Attend and present at conferences of the Young Scientists Journal.</li>
+                      <span class="fa fa-check"></span>Learn skills and exposure for research and competing at science fairs.<br>
+                      <span class="fa fa-check"></span>Publish your research.<br>
+                      <span class="fa fa-check"></span>Receive mentorship for research projects.<br>
+                      <span class="fa fa-check"></span>Attend and present at conferences of the Young Scientists Journal.<br>
                     </div>
 </div>
                 <div class="cwp4-image col-lg-6 pl-lg-5 mt-lg-0 mt-5">
-                    <button class="accordion">How does a club benefit from membership of reSTEM and which ones are eligible?</button>
+                    <button class="accordion">How does a club benefit from membership of reSTEM?</button>
                     <div class="panel">
 						    
-                      <span class="fa fa-check"></span>Access to unique activities (elaborated below) to promote STEM, especially research.</li>
-                      <span class="fa fa-check"></span>Promotional material and other support to increase enrolment.</li>
-                      <span class="fa fa-check"></span>For membership of the network, a club must be: STEM-oriented, authorized to operate by the institution and free and open for all students of the institution.</li>
+                      <span class="fa fa-check"></span>Access to unique activities (elaborated below) to promote STEM, especially research.<br>
+                      <span class="fa fa-check"></span>Promotional material and other support to increase enrolment.<br>
+</div>
+                    <button class="accordion">How does a club benefit from membership of reSTEM?</button>
+                    <div class="panel">
+For membership of the network, a club must be:<br>
+<span class="fa fa-check"></span> STEM-oriented<br>
+<span class="fa fa-check"></span> Authorized to operate by the institution <br>
+<span class="fa fa-check"></span> Free and open for all students of the institution.<br>
+</div>
 			</div>
                     <button class="accordion">How to join?</button>
                     <div class="panel">
-                      <span class="fa fa-check"></span>Sign up using the online form.</li>
-                      <span class="fa fa-check"></span>If approved, a link will be sent to register on a partner platform through which content will be provided for activities and workshops.</li>
-                      <span class="fa fa-check"></span>Register Hub members to give them access to quizzes and other content.</li>
+                      <span class="fa fa-check"></span>Sign up using the online form.<br>
+                      <span class="fa fa-check"></span>If approved, a link will be sent to register on a partner platform through which content will be provided for activities and workshops.<br>
+                      <span class="fa fa-check"></span>Register Hub members to give them access to quizzes and other content.<br>
                     </div>
                     <button class="accordion">When will activities be conducted?</button>
                     <div class="panel">
-                      <span class="fa fa-check"></span>Hub Activities can be conducted in weekly or biweekly sessions (total one hour a week) before, within or after school hours.</li>
-                      <span class="fa fa-check"></span>A <a href="calendar.html" target="_blank"><u>sample calendar</u></a> is available but Hubs can modify it according to requirements.</li>
-                      <span class="fa fa-check"></span>Content for workshops etc. is specially designed to be convenient for both in-person and virtual modes and are compatible with Zoom, Google Meet and other platforms.</li>
+                      <span class="fa fa-check"></span>Hub Activities can be conducted in weekly or biweekly sessions (total one hour a week) before, within or after school hours.<br>
+                      <span class="fa fa-check"></span>A <a href="calendar.html" target="_blank"><u>sample calendar</u></a> is available but Hubs can modify it according to requirements.<br>
+                      <span class="fa fa-check"></span>Content for workshops etc. is specially designed to be convenient for both in-person and virtual modes and are compatible with Zoom, Google Meet and other platforms.<br>
                     </div>
 </div>
 
