--- a/faq.html
+++ b/faq.html
@@ -182,18 +182,18 @@ Author URL: http://w3layouts.com
                       <span class="fa fa-check"></span>Access to unique activities (elaborated below) to promote STEM, especially research.<br>
                       <span class="fa fa-check"></span>Promotional material and other support to increase enrolment.<br>
 </div>
-                    <button class="accordion">How does a club benefit from membership of reSTEM?</button>
+                    <button class="accordion">Which clubs are eligible for membership of reSTEM?</button>
                     <div class="panel">
 For membership of the network, a club must be:<br>
 <span class="fa fa-check"></span> STEM-oriented<br>
 <span class="fa fa-check"></span> Authorized to operate by the institution <br>
 <span class="fa fa-check"></span> Free and open for all students of the institution.<br>
 </div>
-			</div>
+			
                     <button class="accordion">How to join?</button>
                     <div class="panel">
                       <span class="fa fa-check"></span>Sign up using the online form.<br>
-                      <span class="fa fa-check"></span>If approved, a link will be sent to register on a partner platform through which content will be provided for activities and workshops.<br>
+                      <span class="fa fa-check"></span>If approved, a link will be sent to register on the platform through which content will be provided for activities and workshops.<br>
                       <span class="fa fa-check"></span>Register Hub members to give them access to quizzes and other content.<br>
                     </div>
                     <button class="accordion">When will activities be conducted?</button>
