--- a/faq.html
+++ b/faq.html
@@ -150,7 +150,7 @@ Author URL: http://w3layouts.com
                 <div class="cwp4-text col-lg-6">
                     <button class="accordion">What is reSTEM?</button>
                     <div class="panel">
-                        <span class="fa fa-check"></span>Subsidiary of the prestigious Young Scientists Journal, reSTEM is a global network of research-oriented high school science clubs.<br>
+                        <span class="fa fa-check"></span>An initiative of the prestigious Young Scientists Journal, reSTEM is a global network of research-oriented high school science clubs.<br>
                         <span class="fa fa-check"></span>These hubs are provided with support for conducting activities like skill workshops, guidance seminars etc.<br>
                         <span class="fa fa-check"></span>Hubs and Hub members compete with each other in various contests.<br>
                         <span class="fa fa-check"></span>reSTEM Hubs form a global community of youth STEM research.<br>
