--- a/faq.html
+++ b/faq.html
@@ -22,7 +22,7 @@ Author URL: http://w3layouts.com
 <style>
 .accordion {
   background-color: #eee;
-  color: #444;
+  color: #cc0000;
   cursor: pointer;
   padding: 18px;
   width: 100%;
