--- a/calendar.html
+++ b/calendar.html
@@ -10,7 +10,7 @@ Author URL: http://w3layouts.com
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel= "icon" href="restemlogo.png" type="image/png">
 
-    <title>reSTEM : reimagining STEM</title>
+    <title>reSTEM Research Clubs</title>
     <!-- web fonts -->
     <link href="//fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
     <!-- //web fonts -->
