added login button

--- a/activities.html
+++ b/activities.html
@@ -29,7 +29,8 @@ Author URL: http://w3layouts.com
 				<li class="top_li1"><span class="fa fa-envelope-o"></span> <a href="mailto:restem@ysjournal.com" class="mail">restem@ysjournal.com</a>	</li>
 		</div>
 		<div class="social-top col-md-3 col-6">
-			<a href="join.html" class="btn btn-secondary btn-theme4">Join</a>
+      <a href="join.html" class="btn btn-secondary btn-theme4">Join</a>
+      <a href="http://hubs.ysjournal.com/moodle/login/" class="btn btn-secondary btn-theme4" target="_blank">Login</a>
 		</div>
 	</header>
 </div>
