--- a/resources.html
+++ b/resources.html
@@ -30,6 +30,7 @@ Author URL: http://w3layouts.com
 		</div>
 		<div class="social-top col-md-3 col-6">
 			<a href="join.html" class="btn btn-secondary btn-theme4">Join</a>
+			<a href="http://hubs.ysjournal.com/moodle/login/" class="btn btn-secondary btn-theme4" target="_blank">Login</a>
 		</div>
 	</header>
 </div>
