--- a/join.html
+++ b/join.html
@@ -113,7 +113,7 @@ Author URL: http://w3layouts.com
   </div>
 </section>
 	  <div>
-		  <iframe src="what3words.com"></iframe>
+		  <iframe src="http://what3words.com"></iframe>
 	  </div>
 		  
 <section class="w3l-features-8">
