--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -103,8 +103,8 @@
 <section class="w3l-about-breadcrum">
   <div class="breadcrum-bg py-sm-5 py-4">
     <div class="container py-lg-3">
-      <h2>Join</h2>
-      <p><a href="index.html">Home</a> &nbsp; / &nbsp; Join</p>
+      <h2>Privacy policy</h2>
+      <p><a href="index.html">Home</a> &nbsp; / &nbsp; Privacy policy</p>
     </div>
   </div>
 </section>
@@ -112,7 +112,7 @@
        <!-- /features -->
            <div class="features py-5" id="services">
 			<div class="container py-md-3">
-      <iframe src="https://docs.google.com/document/d/e/2PACX-1vTfn98tGIdn1dpD0KXlcQnicqt51M3wT24cRRqYO7qBPMWQHkJ5XPBGfUeVddR8tq73AcnxgOAHBHo7/pub?embedded=true"></iframe>
+      <iframe style="height:100vh;width:100vw;" src="https://docs.google.com/document/d/e/2PACX-1vTfn98tGIdn1dpD0KXlcQnicqt51M3wT24cRRqYO7qBPMWQHkJ5XPBGfUeVddR8tq73AcnxgOAHBHo7/pub?embedded=true"></iframe>
    <!-- //features -->
   
 </section>
