Linked Privacy Policy

--- a/resources.html
+++ b/resources.html
@@ -370,7 +370,7 @@ Author URL: http://w3layouts.com
         <div class="d-grid grid-col-2 bottom-copies">
             <p class="copy-footer-29">© 2020 Young Scientists Journal. All rights reserved.</p>
              <ul class="list-btm-29">
-                    <li><a href="#link">Privacy policy</a></li>
+                    <li><a href="privacypolicy.html">Privacy policy</a></li>
                     <li><a href="#link">Terms of service</a></li>
                     
                 </ul>
