--- a/partner.html
+++ b/partner.html
@@ -181,7 +181,7 @@ We’d love to hear from you on <a href="mailto:restem@ysjournal.com" class="mai
         <div class="d-grid grid-col-2 bottom-copies">
             <p class="copy-footer-29">© 2020 Young Scientists Journal. All rights reserved.</p>
              <ul class="list-btm-29">
-                    <li><a href="#link">Privacy policy</a></li>
+                    <li><a href="privacypolicy.html">Privacy policy</a></li>
                     <li><a href="#link">Terms of service</a></li>
                     
                 </ul>
